# PikPipe-private

./: .gitignore  CMakeLists.txt  README.md
BackServer/: CMakeLists.txt
BackServer/src/: main.cpp
Client/: makefile  package-lock.json  package.json
Client/public/: index.html
Client/src/: App.tsx  index.css  index.tsx  react-app-env.d.ts
Client/src/components/: index.ts
Client/src/components/Button/: Button.css  Button.tsx
Client/src/components/Coordinates/: Coordinates.css  Coordinates.tsx  index.ts
Client/src/components/DotModal/: DotModal.css  DotModal.tsx  index.ts
Client/src/components/ErrorModal/: ErrorModal.css  ErrorModal.tsx  index.ts
Client/src/components/Export/: Export.css  Export.tsx  index.ts
Client/src/components/Fittings/: Fittings.css  Fittings.tsx  index.ts
Client/src/components/Loader/: Loader.css  Loader.tsx
Client/src/components/Menu/: Menu.css  Menu.tsx  api.ts
Client/src/components/Uploader/: Dropzone.css  Dropzone.tsx  Uploader.css  Uploader.tsx  index.ts
Client/src/components/Viewer/: Viewer.css  Viewer.tsx  errors.ts
Client/src/context/: AppContext.ts
Client/src/elements/: Modal.css  Modal.tsx  Portal.tsx
Client/src/types/: types.ts
Client/src/utils/: draw.ts  index.ts  isEvtWithFiles.ts  toHex.ts
data/: avalible_fittings.yaml  СТМ8-1П-А-1.dxf  СТМ8-1П-Б-2.dxf  СТМ8-2Л-А-1.dxf  СТМ8-2Л-Б-1.dxf  СТМ8-4П-А-1.dxf
include/: dxf_parser.h  mainwindow.h  qdxfviewer.h
include/PipeAlgo/: PipeAlgo.h
libdxfrw/: CMakeLists.txt
src/: dxf_parser.cpp  header.h  main.cpp  mainwindow.cpp  qdxfviewer.cpp
src/PipeAlgo/: CMakeLists.txt  PipeAlgo.cpp
src/PipeAlgo/include/: PipeAlgo.h
src/PipeAlgo/src/: PipeAlgo.cpp
src/PipeAlgo/tests/: tests.cpp
src/PipeAlgo/tests/tests_yaml_graphs/: test_fitting_1.yaml  test_fitting_2.yaml  test_fitting_3.yaml  test_result_1.yaml  test_result_2.yaml
ui/: mainwindow.ui
